fix: replace deprecated new URL(String) with new URI().toURL()
downloadViaConnection() used deprecated URL(String) constructor.
Replaced with URI(pdfUrl).toURL().openConnection() and wrapped the
checked URISyntaxException in IOException to keep the method signature
clean (throws IOException only, no URISyntaxException propagation).

Also removed the now-unused java.net.URL import and the unnecessary
URISyntaxException from both downloadPdf() and downloadViaConnection()
method signatures.

https://claude.ai/code/session_01XWxBdz7fqktiroD11hLUke