@@ -22,7 +22,6 @@ import java.io.InputStream;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.net.URLConnection;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
@@ -137,7 +136,7 @@ public abstract class AbstractPDFParser {
         }
     }
 
-    protected void downloadPdf(String pdfUrl, String destinationPath) throws IOException, URISyntaxException {
+    protected void downloadPdf(String pdfUrl, String destinationPath) throws IOException {
 
         Path destPath = Paths.get(destinationPath);
         if (Files.exists(destPath)) {
@@ -154,8 +153,13 @@ public abstract class AbstractPDFParser {
         logger.debug("Downloaded PDF to: {}", destPath);
     }
 
-    private void downloadViaConnection(String pdfUrl, Path destPath, SSLSocketFactory sslSocketFactory) throws IOException, URISyntaxException {
-        URLConnection connection = new URL(pdfUrl).openConnection();
+    private void downloadViaConnection(String pdfUrl, Path destPath, SSLSocketFactory sslSocketFactory) throws IOException {
+        URLConnection connection;
+        try {
+            connection = new URI(pdfUrl).toURL().openConnection();
+        } catch (URISyntaxException e) {
+            throw new IOException("Invalid PDF URL: " + pdfUrl, e);
+        }
         if (sslSocketFactory != null && connection instanceof HttpsURLConnection) {
             HttpsURLConnection httpsConn = (HttpsURLConnection) connection;
             httpsConn.setSSLSocketFactory(sslSocketFactory);
